# YouTube-ppt

./: .env.example  .gitignore  CLAUDE.md  README.md  cookies.txt  main.py  pyproject.toml
.claude/: settings.local.json
app/: config.py  database.py  main.py
app/models/: job.py
app/routers/: sse.py  video.py
app/schemas/: job.py
app/services/: ai_outline.py  downloader.py  extractor.py  optimizer.py  pipeline.py  slide_builder.py  subtitle.py  transcriber.py  translator.py
app/workers/: queue.py
static/: index.html  job.html  viewer.html
static/js/: api.js  sse.js
